--- a/public-ui/src/app/data-browser/chart/chart.component.css
+++ b/public-ui/src/app/data-browser/chart/chart.component.css
@@ -3,3 +3,15 @@
     width: auto;
     height: 100%
 }
+
+.small-chart {
+    display: block;
+    width: 400px;
+    height: 300px;
+}
+
+highcharts-title {
+    fill: #434348;
+    font-weight: 400;
+    font-size: 10px;
+}
