getting font and wraps right

--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -3,11 +3,14 @@
   <div class="row">
     <h4>Your All of Us research account has been created!</h4>
   </div>
-  <div class="row">
-    <h3>We've created a Google account for </h3>
+  <div class="row" style="height:1.5rem">
+    <h3>Your new account</h3>
   </div>
   <div class="row" style="white-space: nowrap">
-    <h3>{{email}}@{{gsuiteDomain}} </h3>
+    <h3>{{email}}@{{gsuiteDomain}}</h3>
+  </div>
+  <div class="row">
+    <h3 style="margin-top:.5rem">is hosted by Google.</h3>
   </div>
   <div class="row">
     <h4>Now you need to log in using this account</h4>
