--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -1,4 +1,4 @@
-<div style="width: 15rem;">
+<div>
   <h1 style="margin-left:-0.5rem;">CONGRATULATIONS!</h1>
   <div class="row">
     <h4>Your All of Us research account has been created!</h4>
