--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -4,13 +4,13 @@
     <h4>Your All of Us research account has been created!</h4>
   </div>
   <div class="row" style="height:1.5rem">
-    <h3>Your new account</h3>
+    <h3 style="font-weight:300">Your new account</h3>
   </div>
   <div class="row" style="white-space: nowrap">
-    <h3>{{email}}@{{gsuiteDomain}}</h3>
+    <h3 style="font-weight:300">{{email}}@{{gsuiteDomain}}</h3>
   </div>
   <div class="row">
-    <h3 style="margin-top:.5rem">is hosted by Google.</h3>
+    <h3 style="margin-top:.5rem; font-weight:300">is hosted by Google.</h3>
   </div>
   <div class="row">
     <h4>Now you need to log in using this account</h4>
