fix copy on congrats page

--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -13,7 +13,7 @@
     <h3 style="margin-top:.5rem; font-weight:300">is hosted by Google.</h3>
   </div>
   <div class="row">
-    <h4>Now you need to log in using this account</h4>
+    <h4>Please log into your new account.</h4>
   </div>
   <div class="row" style="padding-top:0.5rem;">
     <button class="btn btn-primary" (click)="signIn()">LOGIN</button>
