Don't wrap text

--- a/ui/src/app/views/workspace-list/component.css
+++ b/ui/src/app/views/workspace-list/component.css
@@ -39,8 +39,7 @@
 .spinner-text {
   text-align: center;
   /* This forces the flex layout to put the text on a new line. */
-  margin-left: calc(50% - 90px);
-  margin-right: calc(50% - 90px);
+  width: 100%;
 }
 
 .card {
