--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -99,8 +99,7 @@
         <span class="spinner spinner-lg"></span>
         <p *ngIf="clusterLongWait" class="spinner-text">
           <span class="spinner-header">Initializing Notebook Server</span><br>
-          May take up to<br>
-          5 minutes
+          May take up to 5 minutes
         </p>
       </div>
       <clr-datagrid *ngIf="!notebooksLoading && !clusterLoading">
