--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -48,8 +48,7 @@ h3 {
 .spinner-text {
   text-align: center;
   /* This forces the flex layout to put the text on a new line. */
-  margin-left: calc(50% - 75px);
-  margin-right: calc(50% - 75px);
+  width: 100%;
 }
 
 .notebook-table-row {
