--- a/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
+++ b/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
@@ -16,7 +16,7 @@
     <clr-dg-cell *ngFor="let col of columns" class="cell">
       <ng-container [ngSwitch]="col.name">
         <span *ngSwitchCase="'itemDate'">
-          {{ datum.itemDate | date:'yyyy-MM-dd HH:mm:ss' }}
+          {{ datum.itemDate }}
         </span>
         <span *ngSwitchCase="'sourceVocabulary'"
           [style.width.%]="100"
