[RW-631][RW-632] Change text for username (#835)
* Change text

* Address RW-632 as well

* Tooltip added

* Enforce username rules

* Add check for endswith

* New language

* Change to 'New Username' per feedback

* Correct spelling

* Change to latest text

* Change to info icon for password

* Remove GSUITE domain

* Includes test rather than excludes

* Nitpick solve

--- a/ui/src/app/views/account-creation/component.css
+++ b/ui/src/app/views/account-creation/component.css
@@ -6,6 +6,7 @@
 
 .form-section {
   margin-top: 1rem;
+  min-width: 25rem;
 }
 
 .form-section:first {
@@ -31,4 +32,16 @@
   width: 8rem;
   vertical-align: middle;
   color: black;
+}
+
+.is-solid.info-icon {
+  color: #302C71;
+  height: 22px;
+  width: 22px;
+}
+
+.domain {
+  font-size: 16px;
+  font-weight: 300;
+  color: #302C71;
 }
