Use only public methods in templates

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -21,7 +21,7 @@
 <div class="count-preview">
   <button type="button"
     class="btn"
-    (click)="actions.requestPreview()"
+    (click)="requestPreview()"
     [clrLoading]="preview.get('requesting', false)"
     >
     Calculate
