Js/no summary (#852)
* Provisionally remove summary page

* Add in a preview count action

* Use only public methods in templates

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -17,3 +17,20 @@
     </div>
   </section>
 </form>
+
+<div class="count-preview">
+  <button type="button"
+    class="btn"
+    (click)="requestPreview()"
+    [clrLoading]="preview.get('requesting', false)"
+    >
+    Calculate
+  </button>
+  Number Participants:
+  <span *ngIf="!preview.get('requesting')">
+    {{ preview.get('count', 0) }}
+  </span>
+  <span *ngIf="preview.get('requesting')" class="spinner spinner-inline">
+    Loading...
+  </span>
+</div>
