highlight answers inprog

--- a/public-ui/src/app/views/survey-view/survey-view.component.css
+++ b/public-ui/src/app/views/survey-view/survey-view.component.css
@@ -43,4 +43,10 @@
     margin-left: .5rem;
 }
 
+.answer-active, .answer-card {
+    background-color: #D9E4EA;
+}
+.answer-card {
+    height: 100%;
+}
 
