first pass at homepage

--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -31,7 +31,7 @@
     <section class="sidenav-content">
       <button class="btn btn-primary nav-link"
           [class.active]="workspacesActive"
-          routerLink="/"
+          routerLink="/workspaces"
           (click)="sidenavToggle = false">My Workspaces</button>
       <button class="btn btn-primary nav-link"
           [class.active]="reviewWorkspaceActive"
