--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -48,7 +48,7 @@
     font-size: .75rem;
     line-height: 1rem;
     font-weight: lighter;
-    width: 30rem;
+    width: 50rem;
 }
 
 .learn-more-button {
@@ -137,6 +137,7 @@
     margin-left: 2rem;
     padding-left: 1.2rem;
     padding-top: 1rem;
+    position: relative;
 }
 
 .card *.title {
@@ -158,10 +159,10 @@
     background-color: #302C71;
     border-radius: .3125rem;
     color: #FFFFFF;
-    padding-left: .5rem;
-    padding-top: .2rem;
-    margin-top: 1rem;
-    align-content: center
+    margin-top: 2.25rem;
+    position: absolute;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .bottom-banner {
