--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -1,9 +1,9 @@
 <div class="background-image"></div>
 <div class="rectangle"></div>
-<div class="tip-title">Tip/demo/tutorial</div>
-<div class="tip-title tip-subtitle">Lorem ipsum dolor sit amet</div>
-<div class="tip-title tip-description">Consectetur adipiscing elit. Aenean euismod bibendum laoreet. Gravida dolor sit amet lacus accumsan et viverra justo commodo.</div>
-<div class="learn-more-button">Learn more</div>
+<div class="tip-title">{{tipHeadline}}</div>
+<div class="tip-title tip-subtitle">{{tipSubtitle}}</div>
+<div class="tip-title tip-description">{{tipDetail}}</div>
+<div *ngIf="tipButton" class="learn-more-button" (click)="bugReportComponent.reportBug();">{{tipButton}}</div>
 <div class="profile-box">
     <div style="float: left; width: 50%">
         <div class="profile-title">
@@ -33,9 +33,8 @@
 <div class="card-area">
     <div class="card">
         <div class="title">Create your own workspace</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Aenean euismod bibendum laoreet. Proin gravida dolor sit
-            amet lacus accumsan et viverra justo commodo. </div>
+        <div class="description">Here you can create and name a workspace.
+        Within a workspace you can create notebooks and build cohorts.</div>
         <button class="button tooltip" (click)="addWorkspace()" [disabled]="!billingProjectInitialized">
             Create Workspace
             <span *ngIf="!billingProjectInitialized" class="tooltip-content">
@@ -45,9 +44,8 @@
     </div>
     <div class="card">
         <div class="title">View your workspaces</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Aenean euismod bibendum laoreet. Proin gravida dolor sit
-            amet lacus accumsan et viverra justo commodo. </div>
+        <div class="description">Here you can view all workspaces you have created, or that have been
+        shared with you.</div>
         <button class="button tooltip" (click)="listWorkspaces()" [disabled]="!FCAccountInitialized">
             Go to Workspaces
             <span *ngIf="!FCAccountInitialized" class="tooltip-content">
@@ -67,3 +65,4 @@
         Terms of Service
     </div>
 </div>
+<app-bug-report></app-bug-report>
