--- a/public-ui/src/app/views/app/component.html
+++ b/public-ui/src/app/views/app/component.html
@@ -1,5 +1,5 @@
 <clr-main-container>
-  <app-db-header></app-db-header>
+  <app-db-header [noMenu]="noHeaderMenu"></app-db-header>
   <div class="content-container">
     <div class="content-area">
       <router-outlet></router-outlet>
