--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -2,8 +2,8 @@
 
   <div class="col-xs-12 col-sm-12 col-md-8">
     <div class="page-header">
-      <div class="view-title"> {{title}}</div>
-      <div class="view-sub-title">{{subTitle}} </div>
+      <h2 class="view-title"> {{title}}</h2>
+      <p class="view-sub-title">{{subTitle}} </p>
     </div>
     <div class="white-box" >
       <div class="search-input-big">
