--- a/public-ui/src/app/styles/page.css
+++ b/public-ui/src/app/styles/page.css
@@ -122,9 +122,15 @@ p {
 .row.search {
     /*opacity: 0.32;*/
     border-radius: 4px;
-    background-color: rgba(38,34,98,0.27);
+    background-color: #ECECF1; /* rgba(38,34,98,0.27); */
     box-shadow: 0 4px 12px 0 rgba(0,0,0,0.15);
     padding-top:.5rem;
     padding-bottom:.5rem;
     margin-bottom: 1rem;
+}
+
+/* result card */
+.white-card-box.search-result {
+    height: 240px;
+    width: 240px;
 }
