--- a/ui/src/app/views/breadcrumb/component.html
+++ b/ui/src/app/views/breadcrumb/component.html
@@ -1,6 +1,6 @@
 <div class="breadcrumb-container">
   <div *ngFor="let breadcrumb of breadcrumbs; let last = last"
        [ngClass]="{'breadcrumb-last': last, 'breadcrumb': !last}">
-    <a [routerLink]="[breadcrumb.url]">{{ breadcrumb.label | titlecase }}</a>
+    <a [routerLink]="[breadcrumb.url]">{{ breadcrumb.label }}</a>
   </div>
 </div>
