--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -28,7 +28,7 @@
               <div class="card-title">
                 {{survey.numParticipants}} Participants
               </div>
-              <div class="card-text">
+              <div class="card-text smaller">
                 {{survey.domainDesc}}
               </div>
             </div>
