--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -22,7 +22,12 @@
 
           <section class="form-block">
             <div class="form-group filters">
-              <label>Electronic Health Records</label>
+              <div>
+                <label>Electronic Health Records</label>
+              </div>
+              <div class="sub-label">
+                <label> (check all that apply)</label>
+              </div>
               <clr-checkbox *ngFor="let d of ehrDomains"
                       name="{{d.domainDisplay}}"
                       id="{{d.domainId}}"
@@ -61,23 +66,22 @@
     <div class="row" >
 
 
-          <div class="col-sm-3 col-xs-12 white-card-box search-result" *ngFor="let r of searchResults">
-              <a routerLink="/survey/{{r.domainId.toLowerCase()}}" class="card clickable">
-                <div class="card-header">
+          <div class="col-sm-4 col-xs-12" *ngFor="let r of searchResults">
+              <div class="white-card-box search-result">
+                <h5 class="box-title">
                   {{r.domainDisplay}}
+                </h5>
+                <div class="card-stat">
+                  {{r.countValue | number}}
                 </div>
-                <div class="card-block">
-                  <div class="card-title">
-                    {{r.countValue}}
-                  </div>
-                  <div class="card-text">
-                    There are {{r.countValue}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants}}.
-                  </div>
-                </div>
+                <p class="card-text bigger">
+                  There are {{r.countValue}} {{r.domainDisplay.toLowerCase()}} out of {{totalParticipants}}.
+                </p>
+
                 <div>
-                  <button class="btn btn-primary search" [routerLink]="['surveys']">Search</button>
+                  <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
                 </div>
-              </a>
+              </div>
           </div>
 
 
