--- a/ui/src/app/cohort-review/detail-all-events/detail-all-events.component.html
+++ b/ui/src/app/cohort-review/detail-all-events/detail-all-events.component.html
@@ -9,14 +9,13 @@
     {{ col.displayName }}
   </clr-dg-column>
 
-  <clr-dg-row *clrDgItems="let datum of data">
+  <clr-dg-row *clrDgItems="let datum of data"
+    (click)="onClick(datum)"
+    [style.cursor]="'pointer'">
     <clr-dg-cell *ngFor="let col of columns" class="cell">
       <ng-container [ngSwitch]="col.name">
         <span *ngSwitchCase="'itemDate'">
-          {{ datum.itemDate }}
-        </span>
-        <span *ngSwitchCase="'endDate'">
-          {{ datum.endDate | date:'yyyy-MM-dd HH:mm:ss' }}
+          {{ datum.itemDate | date:'yyyy-MM-dd HH:mm:ss' }}
         </span>
         <span *ngSwitchCase="'sourceVocabulary'"
           [style.width.%]="100"
